dynamic page precompiling setup

--- a/html/index.html
+++ b/html/index.html
@@ -11,5 +11,6 @@
             <!-- @couch-mint/react-entrypoint -->
         </div>
         <!-- @couch-mint/bundle-entrypoint -->
+        <!-- @couch-mint/props-injection-point -->
     </body>
 </html>
