feat: Updates HOME and ARTICLE route to use heller-2-react4

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- @couch-mint/seo-additional-metadata -->
+        <link rel="stylesheet" href="/variables.css">
+        <link rel="stylesheet" href="/alert.min.css">
+        <link rel="stylesheet" href="/base.min.css">
+        <link rel="stylesheet" href="/button.min.css">
+        <link rel="stylesheet" href="/typography.min.css">
         <link rel="stylesheet" href="/index.css">
     </head>
     <body>
