--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- @couch-mint/seo-additional-metadata -->
-        <link rel="stylesheet" href="/variables.css">
-        <link rel="stylesheet" href="/alert.min.css">
-        <link rel="stylesheet" href="/base.min.css">
-        <link rel="stylesheet" href="/button.min.css">
-        <link rel="stylesheet" href="/typography.min.css">
-        <link rel="stylesheet" href="/index.css">
-
+        
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -18,6 +11,25 @@
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#d5625b">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
+
+        <!-- @couch-mint/seo-additional-metadata -->
+        <link rel="preload" as="style" href="/variables.css">
+        <link rel="stylesheet" href="/variables.css">
+
+        <link rel="preload" as="style" href="/alert.min.css">
+        <link rel="stylesheet" href="/alert.min.css">
+
+        <link rel="preload" as="style" href="/base.min.css">
+        <link rel="stylesheet" href="/base.min.css">
+
+        <link rel="preload" as="style" href="/button.min.css">
+        <link rel="stylesheet" href="/button.min.css">
+
+        <link rel="preload" as="style" href="/typography.min.css">
+        <link rel="stylesheet" href="/typography.min.css">
+        
+        <link rel="preload" as="style" href="/index.css">
+        <link rel="stylesheet" href="/index.css">
     </head>
     <body>
         <div id="app" data-theme="light">
