feat: Ports to App Layout pattern

--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,21 @@
         <link rel="preload" as="style" href="/button.min.css">
         <link rel="stylesheet" href="/button.min.css">
 
+        <link rel="preload" as="style" href="/flexbox.min.css">
+        <link rel="stylesheet" href="/flexbox.min.css">
+
+        <link rel="preload" as="style" href="/grid.min.css">
+        <link rel="stylesheet" href="/grid.min.css">
+
+        <link rel="preload" as="style" href="/glasspane.min.css">
+        <link rel="stylesheet" href="/glasspane.min.css">
+
+        <link rel="preload" as="style" href="/link.min.css">
+        <link rel="stylesheet" href="/link.min.css">
+
+        <link rel="preload" as="style" href="/spacing.min.css">
+        <link rel="stylesheet" href="/spacing.min.css">
+
         <link rel="preload" as="style" href="/typography.min.css">
         <link rel="stylesheet" href="/typography.min.css">
         
